--- a/main.ipynb
+++ b/main.ipynb
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ExtendedTSSRP import ExtendedTSSRP\n",
     "from TSSRP import TSSRP\n",
     "from Oracle import Oracle\n",
-    "from spc import spc\n",
+    "from spc.spc import spc\n",
     "truesensidx = np.arange(nsensors)\n",
     "nmodels = 4\n",
     "model_all = [[] for i in range(nmodels)]\n",
@@ -421,7 +421,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   },
@@ -451,7 +453,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
