Modify case study and add adjust the decisionchart

--- a/ETSSRP_Visualization.ipynb
+++ b/ETSSRP_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe7d239ac50>"
+       "<matplotlib.image.AxesImage at 0x7f2d8743bb50>"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -76,21 +76,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe7d2421050>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2421250>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2421410>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d24215d0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2421790>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2421950>]"
+       "(900, 36)"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7f2d873d3050>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d873b92d0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d873b9490>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d873b9650>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d873b9810>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d873b99d0>]"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -113,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe7d2495a90>"
+       "<matplotlib.image.AxesImage at 0x7f2d87326b90>"
       ]
      },
-     "execution_count": 254,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,51 +206,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe7d2b08f50>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b13190>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b13350>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b13510>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b136d0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b13890>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b13ad0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b13c90>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b13e50>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b138d0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b56f50>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b17310>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b174d0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b17690>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b17850>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b17a10>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b17bd0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b17d90>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b17f50>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1a150>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1a310>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1a4d0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1a690>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1a850>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1aa10>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1abd0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1ad90>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1af50>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1f150>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1f310>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1f4d0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1f690>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1f850>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1fa10>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1fbd0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fe7d2b1fd90>]"
+       "[<matplotlib.lines.Line2D at 0x7f2d872e6b50>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8728ba50>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8728bc10>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8728bdd0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8728bf90>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87296190>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d872963d0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87296590>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8728bf50>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d872961d0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d872e0e10>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87296bd0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87296d90>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87296f50>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87299150>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87299310>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d872994d0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87299690>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87299850>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87299a10>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87299bd0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87299d90>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d87299f50>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729d150>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729d310>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729d4d0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729d690>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729d850>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729da10>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729dbd0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729dd90>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d8729df50>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d872a0150>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d872a0310>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d872a04d0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f2d872a0690>]"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -255,12 +275,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ExtendedTSSRP import ExtendedTSSRP\n",
-    "from TSSRP import TSSRP\n",
+    "kfrom TSSRP import TSSRP\n",
     "from Oracle import Oracle\n",
     "from spc import spc\n",
     "truesensidx = np.arange(nsensors)\n",
@@ -283,6 +303,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.75138594, 0.23530959, 0.01298777, ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       [0.5522911 , 0.39818969, 0.04707606, ..., 0.        , 0.        ,\n",
+       "        0.        ],\n",
+       "       ...,\n",
+       "       [0.        , 0.        , 0.        , ..., 0.04707606, 0.39818969,\n",
+       "        0.5522911 ],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.01298777, 0.23530959,\n",
+       "        0.75138594],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.        , 0.        ,\n",
+       "        1.        ]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -291,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,12 +357,33 @@
     "T0 = 100\n",
     "Tmax = 200\n",
     "delta = 1\n",
+    "seed_list_OC = [0,2,5]\n",
     "x = data_gen_func1(3, Tmax, seed_list_OC, T0, delta)\n",
     "\n",
     "imodel = 0\n",
     "model = model_all[imodel]\n",
     "\n",
     "sequential_statistics_topRsum, sensor_selection_history, failure_mode_history, i,sequential_statistics= model.compute_monitoring_statistics(x[0],T0,-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, 900)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[0].shape"
    ]
   },
   {
