--- a/case_LPBF.ipynb
+++ b/case_LPBF.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "regulated-student",
+   "id": "particular-missouri",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "equivalent-cambodia",
+   "id": "stainless-sauce",
    "metadata": {},
    "source": [
     "# Load Data"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "vulnerable-sandwich",
+   "id": "charged-meditation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +53,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "heavy-latvia",
+   "metadata": {},
+   "source": [
+    "### Figure 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ongoing-passenger",
+   "id": "interior-community",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorporated-mentor",
+   "id": "union-bachelor",
    "metadata": {},
    "source": [
     "# Data Preprocessing"
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advised-devon",
+   "id": "electrical-collect",
    "metadata": {},
    "source": [
     "## Find the printing regions from the dataset "
@@ -102,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "secondary-equilibrium",
+   "id": "greater-arabic",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flying-shark",
+   "id": "negative-terrain",
    "metadata": {},
    "source": [
     "## Find the failure mode $M$ for that overlaps with the printing regions"
@@ -145,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "signal-health",
+   "id": "characteristic-patrick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "extended-wisdom",
+   "id": "dedicated-sample",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alike-league",
+   "id": "impressed-substance",
    "metadata": {},
    "source": [
     "# Create model instance"
@@ -211,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "yellow-shelf",
+   "id": "jewish-bathroom",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unnecessary-carnival",
+   "id": "duplicate-residence",
    "metadata": {},
    "source": [
     "# Run Experiment"
@@ -249,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "leading-dining",
+   "id": "exciting-junction",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incorrect-gather",
+   "id": "third-bonus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "verified-dylan",
+   "id": "average-milton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "wound-brass",
+   "id": "divided-singing",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "deadly-kingdom",
+   "id": "noble-hands",
    "metadata": {},
    "outputs": [
     {
